fix scrollbar margin

--- a/navigator.css
+++ b/navigator.css
@@ -37,7 +37,6 @@
     border-radius: 4px;
     overflow-x: hidden;
     margin: 3px;
-    margin-right: 14px;
     padding: 3px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 8pt;
